[package]
name = "yoto-rs"
version = "0.1.0"
edition = "2021"

[dependencies]

bitflags = "1.3"
byteorder = "1.4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.0", features = ["derive"] }
dirs = "4.0"
fs_extra = "1.2.0"
image = { version = "0.24", features = ["png"] }
indexmap = "1.8"
keyring = { version = "3.6", features = ["apple-native", "windows-native", "sync-secret-service"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
rusttype = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.11"
sysinfo = "0.22"
tempfile = "3.3"
thiserror = "1.0"
uuid = { version = "0.8", features = ["v4"] }
zip = "0.5"
